# libffitest

./: .gitignore  Makefile.am  README  configure.ac  libffitest.pc  libffitest.pc.in
example_c/: .gitignore  Makefile.am  README  configure.ac  example.c
example_pixie/: README  example.pxi
include/: Makefile.am
include/ffitest/: Makefile.am  ffitest.h
src/: Makefile.am  ffitest.c
